--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@ body {
   font-family: "Sora", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: hsl(var(--background));
+  /* background-color: hsl(var(--background)); */
+  background-color: #fafafa;
   color: hsl(var(--foreground));
 }
 
